server/k8s/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metro-timetable
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: metro-timetable
          imagePullPolicy: Always
