server/k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metro-timetable
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - hejnaluk.dev
      secretName: metro-timetable-tls
  rules:
    - host: hejnaluk.dev
      http:
        paths:
          - path: /pid
            pathType: Prefix
            backend:
              service:
                name: metro-timetable
                port:
                  number: 80
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: metro-timetable
                port:
                  number: 80
